# evidence-traceable-cancer-target-prioritization

./: .gitignore  CITATION.cff  FILE_INVENTORY.md  FINAL_CHECK.md  LICENSE  README.md  REMOTE_REPOSITORY_CHECK.md  REPOSITORY_TREE.md  pyproject.toml  requirements.txt
docs/: ORIGINAL_PROJECT_README.md
examples/manifests/: LUDA__data__processed__luad_input_qc.tsv  LUDA__data__processed__ml_label_sources.tsv  LUDA__data__processed__ml_positive_sets.tsv  LUDA__datasources__benchmark__extracted__luad_benchmark_manifest.tsv  PDAC__data__processed__ml_label_sources.tsv  PDAC__data__processed__ml_positive_sets.tsv
figures/source/: fig2a_candidate_and_label_counts.csv  fig2b_evidence_coverage.csv  fig2c_positive_label_sources.csv  fig3_luad_anchor_ranks.csv  fig4_pdac_representative_cards.csv  fig5ab_label_permutation_summary.csv  fig5c_full_source_out_transfer.csv  fig5d_independent_topk_recovery.csv  fig5e_oof_recovery.csv  fig5f_model_sensitivity.csv  fig6_evidence_card_examples.csv  fig7_threshold_robustness.csv
scripts/: generate_figures.py  generate_tables.py  main.py  run_luad_analysis.py  run_pdac_analysis.py  run_validation.py
src/LUDA/: __init__.py  run.py
src/PDAC/: __init__.py  run.py
src/framework/: __init__.py  benchmark_download.py  experiment.py  module_figures.py  paper_figures.py  paper_overview_figure.py  paper_tables.py  pipeline.py  verify.py
src/tests/: __init__.py  test_method_contract.py
supplementary_manifest/: data_availability_manifest.tsv  output_files_description.md  source_data_manifest.tsv  supplementary_tables_manifest.tsv
(+25 files in other folders)
